# gen/py/chromestatus_openapi/chromestatus_openapi/controllers/default_controller.py
@@ -49,6 +49,7 @@ from chromestatus_openapi.models.success_message import SuccessMessage  # noqa: 
 from chromestatus_openapi.models.summary_suggestion_list_response import SummarySuggestionListResponse  # noqa: E501
 from chromestatus_openapi.models.summary_suggestion_patch_request import SummarySuggestionPatchRequest  # noqa: E501
 from chromestatus_openapi.models.summary_suggestion_response import SummarySuggestionResponse  # noqa: E501
+from chromestatus_openapi.models.summary_suggestion_trigger_request import SummarySuggestionTriggerRequest  # noqa: E501
 from chromestatus_openapi import util
 
 
@@ -758,6 +759,23 @@ def set_vote_for_feature_and_gate(feature_id, gate_id, post_vote_request):  # no
     """
     if connexion.request.is_json:
         post_vote_request = PostVoteRequest.from_dict(connexion.request.get_json())  # noqa: E501
+    return 'do some magic!'
+
+
+def trigger_summary_generation(feature_id, summary_suggestion_trigger_request=None):  # noqa: E501
+    """Enqueue AI summary generation task for a feature
+
+    Enqueues an asynchronous background Cloud Task to generate an AI release notes summary. Verifies feature edit permissions (owner, editor, admin) before enqueuing. # noqa: E501
+
+    :param feature_id: Feature ID (positive integer)
+    :type feature_id: int
+    :param summary_suggestion_trigger_request: 
+    :type summary_suggestion_trigger_request: dict | bytes
+
+    :rtype: Union[SuccessMessage, Tuple[SuccessMessage, int], Tuple[SuccessMessage, int, Dict[str, str]]
+    """
+    if connexion.request.is_json:
+        summary_suggestion_trigger_request = SummarySuggestionTriggerRequest.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
